--- a/pom.xml
+++ b/pom.xml
@@ -70,13 +70,19 @@
 
                 
                 
-        <!-- https://mvnrepository.com/artifact/jstl/jstl -->
-        <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.0.6</version>
-        </dependency>
+                <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+         <dependency>
+             <groupId>jstl</groupId>
+             <artifactId>jstl</artifactId>
+             <version>1.0</version>
+         </dependency>
 
+
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>1.2.6</version>
+        </dependency>
   
     </dependencies>
 
